--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/adobo.html">Adobo Recipe</a>
+    <ul>
+      <li><a href="./recipes/adobo.html">Adobo Recipe</a></li>
+      <li><a href="./recipes/tinola.html">Tinola Recipe</a></li>
+      <li><a href="./recipes/sinigang.html">Sinigang Recipe</a></li>
+    </ul>
+    
+    
   </body>
 </html>
