Add ingredients and instructions to each recipes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
   <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/eating.gif" alt="Mr. Bean eating chicken">
     <ul>
-      <li><a href="./recipes/adobo.html">Adobo Recipe</a></li>
-      <li><a href="./recipes/tinola.html">Tinola Recipe</a></li>
-      <li><a href="./recipes/sinigang.html">Sinigang Recipe</a></li>
+      <li><a href="./recipes/adobo.html">Pork Adobo</a></li>
+      <li><a href="./recipes/tinola.html">Chicken Tinola</a></li>
+      <li><a href="./recipes/sinigang.html">Pork Sinigang</a></li>
     </ul>
     
     
