--- a/recipes/tinola.html
+++ b/recipes/tinola.html
@@ -10,5 +10,37 @@
     <img src="../images/tinola.jpg" alt="Tinolang Manok">
     <p>Chicken tinola is a healthy, tasty, and comforting soup that's perfect for cold weather. It's delicious on its own or with steamed rice.
     </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 tablespoon canola oil</li>
+      <li>1 small onion, peeled and sliced thinly</li>
+      <li>3 cloves garlic, peeled and minced</li>
+      <li>2 thumb-sized fresh ginger</li>
+      <li>1 (3 to 4 pounds) whole chicken, cut into serving pieces</li>
+      <li>2 tablespoons fish sauce</li>
+      <li>5 cups water</li>
+      <li>1 small green papaya, pared, seeded and cut into 2-inch wedges</li>
+      <li>1 bunch fresh spinach leaves, stems trimmed</li>
+      <li>salt and pepper to taste</li>
+    </ul>
+
+    <h2>Instructions</h2>
+    <ol>
+      <li>In a pot over medium heat, heat oil. Add onions, ginger, and garlic and cook until softened.
+      </li>
+      <li>Add chicken and cook, stirring occasionally, for about 5 to 7 minutes or until chicken starts to change color and juices run clear.</li>
+      <li>Add fish sauce and cook, stirring occasionally, for about 1 to 2 minutes.</li>
+      <li>Add water and bring to a boil, skimming scum that floats on top. Lower heat, cover and simmer for about 30 to 35 minutes or until chicken is cooked through.</li>
+      <li>Add papaya and cook for about 3 to 5 minutes or until tender yet crisp.</li>
+      <li>Season with salt and pepper to taste.</li>
+      <li>Add spinach and push down into broth. Cook until just wilted. Serve hot.</li>
+    </ol>
+
+    <h4>Notes</h4>
+    <ul>
+      <li>Cut the chicken in uniform size to ensure even cooking.</li>
+      <li>For a clear, cloud-free broth, remove any scum that floats on top.</li>
+    </ul>
   </body>
 </html>
